# evoskill

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/auto-docs/: SKILL.MD
.claude/skills/coding-guidelines/: SKILL.MD
evoskill/: __init__.py  agent.py  cli.py  evolution.py  fitness.py  genome.py  lineage.py  llm.py  simulator.py  storage.py  tools.py
evoskill/core/: __init__.py  genome.py  skill.py  tasks.py
evoskill/evolution/: __init__.py  engine.py  fitness.py  lineage.py
evoskill/infra/: __init__.py  config.py  gateway.py  llm.py  storage.py
evoskill/runtime/: __init__.py  agent.py
tests/: test_evolution.py  test_llm.py
