[project]
name = "evoskill"
version = "0.1.0"
description = "Evolutionary skill agent — skills that breed, mutate, and improve through sleep-time simulation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
evoskill = "evoskill.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external API keys (DEEPSEEK_API_KEY, etc.)",
]
